# tabelog_broad_listening

./: .gitignore  README.md  pyproject.toml
src/scraper/: main.py
src/scraper/libs/: tabelog.py
