[project]
name = "tabelog-broad-listening"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "rmc8", email = "k@rmc-8.com" }]
dependencies = [
    "pandas>=2.2.3",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "requests>=2.32.3",
    "fire>=0.7.0",
    "tqdm>=4.67.1",
    "pydantic>=2.10.6",
    "retry>=0.9.2",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-ollama>=0.2.3",
    "dash>=2.18.2",
    "numpy>=1.20.0",
    "numba>=0.53.0",
    "scikit-learn>=1.3.0, <1.7.0",
    "janome>=0.5.0",
    "umap>=0.1.1",
    "hdbscan>=0.8.40",
    "llvmlite>=0.44.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=7.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tabelog_broad_listening"]

[tool.rye.scripts]
get = "python src/scraper/main.py"
analyze = "python src/analyzer/main.py"
